# TERRYBLEMACHINE

./: .gitignore  ARCHITEKTUR.md  CLAUDE-CODE-SETUP.md  CLAUDE.md  LLM-STRATEGIE.md  MEINGESCHMACK-SYSTEM.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai_router/: budget.rs  cache.rs  commands.rs  errors.rs  mod.rs  models.rs  queue.rs  router.rs
src-tauri/src/api_clients/: claude.rs  claude_cli_commands.rs  common.rs  fal.rs  higgsfield.rs  ideogram.rs  kling.rs  meshy.rs  mod.rs  registry.rs  replicate.rs  runway.rs  shotstack.rs
src-tauri/src/brand_kit/: commands.rs  export.rs  mod.rs  pipeline.rs  style_guide.rs  types.rs
src-tauri/src/code_generator/: assist.rs  claude.rs  commands.rs  mod.rs  optimize.rs  preview.rs  prompt.rs  refine.rs  stub.rs  templates.rs  types.rs
src-tauri/src/depth_pipeline/: commands.rs  mod.rs  pipeline.rs  stub.rs  types.rs
src-tauri/src/exporter/: commands.rs  mod.rs  zip_export.rs
src-tauri/src/image_pipeline/: commands.rs  mod.rs  pipeline.rs  stub.rs  types.rs
src-tauri/src/keychain/: commands.rs  errors.rs  keychain_store.rs  mod.rs  stores.rs
src-tauri/src/logo_pipeline/: commands.rs  mod.rs  pipeline.rs  stub.rs  types.rs
src-tauri/src/mesh_pipeline/: commands.rs  mod.rs  pipeline.rs  stub.rs  types.rs
src-tauri/src/projects/: commands.rs  errors.rs  history_commands.rs  mod.rs  storage.rs
src-tauri/src/remotion/: commands.rs  mod.rs  types.rs
src-tauri/src/shotstack_assembly/: commands.rs  mod.rs  pipeline.rs  stub.rs  types.rs
src-tauri/src/storyboard_generator/: commands.rs  generator.rs  mod.rs  prompt.rs  stub.rs  types.rs
src-tauri/src/taste_engine/: analyzer.rs  commands.rs  enricher.rs  errors.rs  mod.rs  negative.rs  parser.rs  types.rs  watcher.rs
src-tauri/src/vectorizer/: commands.rs  mod.rs  (+3 more)
src-tauri/tests/: api_clients_wire_audit.md  brand_kit_integration.rs  depth_pipeline_integration.rs  image_pipeline_integration.rs  keychain_integration.rs  logo_pipeline_integration.rs  mesh_pipeline_integration.rs  projects_commands.rs  remotion_integration.rs  shotstack_assembly_integration.rs  storyboard_generator_integration.rs  taste_engine_live.rs  taste_smoke.rs  vectorizer_integration.rs  video_pipeline_integration.rs  website_analyzer_e2e.rs
(+287 files in other folders)
